2007-11-08  Adam Fedor  <fedor@gnu.org>

	* Mark for Version 2.0.2 (on stable branch)

2007-10-31  David Ayers  <ayers@fsfe.org>

	* rules.make: Implement ADDITIONAL_NATIVE_LIB_DIRS.
	* Documentation/make.texi: Document ADDITIONAL_NATIVE_LIB_DIRS.
	
2007-10-30  Adam Fedor  <fedor@gnu.org>

	* Update licesnse to GPL 3
	* gnustep-make.spec.in: Change Copyright to License.

2007-09-13 Fred Kiefer <FredKiefer@gmx.de>

	* openapp.in: Add linebreak at end of file.

2007-07-13  Nicola Pero  <nicola.pero@meta-innovation.com>

	* {Everything}: Fixed copyright notices to tell the user they can
	read the full text of the GNU GPL in the COPYING file.  The old
	notices were telling users to read the COPYING.LIB file which does
	not exist.

2007-06-15  Adam Fedor  <fedor@gnu.org>

	* Documentation/userfaq.texi: Update.

2007-06-13  Chris Farber <chris@chrisfarber.net>

	* Documentation/README.Darwin: Minor updates and corrections.

2007-05-23  Adam Fedor  <fedor@gnu.org>

	* Mark for Version 2.0.1 (on stable branch)

2007-05-12  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: When checking for the custom ObjC runtime library,
	check in Network and Local as well as System.
	* configure: Regenerated.
	
2007-05-11  Richard Frith-Macdonald <rfm@gnu.org>

	* common.make: correct the os/architecture specific header
	directory for non-flattened compilation.  Needs to be a subdirectory
	of the library-combo directory and wasn't.

2007-05-02  Nicola Pero  <nicola.pero@meta-innovation.com>

	* FilesystemLayouts/fhs-system: Added missing xxx_WEB_APPS
	variables (Reported by Stefan Bidigaray <stefanbidi@gmail.com>).
	Fixed xxx_APPS variables to use 'Applications' and not 'Apps'.
	
2007-05-01  Nicola Pero  <nicola.pero@meta-innovation.com>

	* FilesystemLayouts/gnustep (GNUSTEP_USER_DIR_DOC,
	GNUSTEP_USER_DIR_DOC_INFO, GNUSTEP_USER_DIR_DOC_MAN): Added
	the Library part of the path which was missing.
	* FilesystemLayouts/gnustep-with-network: Same changes.